--- a/projects2.html
+++ b/projects2.html
@@ -109,7 +109,14 @@
                  </article>
                  </div>
          </section>
-</main>
+
+          <!-- extra section start here -->
+<div class="extra">
+  <a href="#">View All</a>
+</div>
+
+      <!-- extra section  here -->
+
   <!-- footer start here -->
   <footer>
     <div class="footer-head">
@@ -125,5 +132,13 @@
         <a href="#">Goal App </a>
         <a href="#">Goal Live</a>
     </div>
+
+    <div class="icon">
+      <i class="fa-brands fa-facebook-square"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+  </div>
 </footer>
+
+</main>
 <!-- footer start here -->
