--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- header start here -->
         <header>
             <div class="header">
-                <div class="div1">
+                <div class="banner-part-1">
                     <h2>The Greatest <br> show on the <br> earth</h2>
                     <p><small>Contrary to popular belief, Lorem Ipsum is not simply <br> 
                         random text. It has roots in a piece of classical Latin literature <br> 
@@ -26,7 +26,7 @@
                     <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
              </div>
  
-             <div class="div2">
+             <div class="banner-part-2">
                 <img src="image/Banner Image.png" alt="">
             </div>
             </div>
@@ -101,7 +101,7 @@
                                   <i class="fa-brands fa-rocketchat"></i>   <span>23</span>    
                              </div>
 
-                             <div class="Blog">
+                             <div class="Blog View-all">
                                    <img class="blog-image" src="image/Blog Image.png" alt=""> 
                                      <button><a href="#">transfer</a></button>
                                        <p>Transfer Live: Chlesea in talks <br>
@@ -110,7 +110,7 @@
                                      <i class="fa-brands fa-rocketchat"></i>   <span>23</span>    
                           </div>
 
-                          <div class="Blog">
+                          <div class="Blog View-all">
                              <img class="blog-image" src="image/Blog Image.png" alt=""> 
                              <button><a href="#">transfer</a></button>
                              <p>Transfer Live: Chlesea in talks <br>
@@ -119,7 +119,7 @@
                              <i class="fa-brands fa-rocketchat"></i>   <span>23</span>    
                           </div>
 
-                          <div class="Blog">
+                          <div class="Blog View-all">
                                      <img class="blog-image" src="image/Blog Image.png" alt=""> 
                                     <button><a href="#">transfer</a></button>
                                     <p>Transfer Live: Chlesea in talks <br>
@@ -139,13 +139,14 @@
 
 
        <!-- extra section start here -->
-<div class="extra">
-    <a href="#">View All</a>
-</div>
+
+              <div class="extra">
+                  <a href="#">View All</a>
+              </div>
 
         <!-- extra section  here -->
 
-
+    </main>
         <!-- footer start here -->
          <footer>
                 <div class="footer-head">
@@ -170,6 +171,6 @@
          </footer>
         <!-- footer start here -->
 
-    </main>
+    
 </body>
 </html>
