--- a/projects2.html
+++ b/projects2.html
@@ -18,7 +18,7 @@
         <!-- header start here -->
         <header>
             <div class="header">
-                <div class="div1">
+                <div class="banner-part-1">
                     <h2>The Greatest <br> show on the <br> earth</h2>
                     <p><small>Contrary to popular belief, Lorem Ipsum is not simply <br> 
                         random text. It has roots in a piece of classical Latin literature <br> 
@@ -26,7 +26,7 @@
                     <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
              </div>
  
-             <div class="div2">
+             <div class="banner-part-2">
                 <img src="image/Banner Image.png" alt="">
             </div>
             </div>
@@ -111,34 +111,38 @@
          </section>
 
           <!-- extra section start here -->
-<div class="extra">
-  <a href="#">View All</a>
-</div>
+            <div class="extra">
+                 <a href="#">View All</a>
+            </div>
 
-      <!-- extra section  here -->
+          <!-- extra section  here -->
+</main>
 
-  <!-- footer start here -->
+
+
+
+             <!-- footer start here -->
   <footer>
-    <div class="footer-head">
-        <h2>Goal</h2>
-             <hr>
-    </div>
+                 <div class="footer-head">
+                     <h2>Goal</h2>
+                          <hr>
+                 </div>
 
-    <div class="footer-link">
-        <a href="#">Contact Us</a>
-        <a href="#">Terms of Service </a>
-        <a href="#">Privacy Policy </a>
-        <a href="#">Privacy Settings </a>
-        <a href="#">Goal App </a>
-        <a href="#">Goal Live</a>
-    </div>
+                 <div class="footer-link">
+                     <a href="#">Contact Us</a>
+                    <a href="#">Terms of Service </a>
+                     <a href="#">Privacy Policy </a>
+                     <a href="#">Privacy Settings </a>
+                     <a href="#">Goal App </a>
+                     <a href="#">Goal Live</a>
+                 </div>
 
-    <div class="icon">
-      <i class="fa-brands fa-facebook-square"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-twitter"></i>
-  </div>
+                 <div class="icon">
+                   <i class="fa-brands fa-facebook-square"></i>
+                   <i class="fa-brands fa-instagram"></i>
+                   <i class="fa-brands fa-twitter"></i>
+               </div>
 </footer>
 
-</main>
-<!-- footer start here -->
+
+            <!-- footer start here -->
