--- a/projects2.html
+++ b/projects2.html
@@ -43,7 +43,7 @@
                 <nav>
                          <li><a href="#">Match</a></li>
                          <li>All Group</li>
-                         <li class="red">Blog</li>
+                         <li class="blog-btn">Blog</li>
                </nav>
 
            <article>      
