--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <header>
             <div class="header">
                 <div class="banner-part-1">
-                    <h2>The Greatest <br> show on the <br> earth</h2>
-                    <p><small>Contrary to popular belief, Lorem Ipsum is not simply <br> 
-                        random text. It has roots in a piece of classical Latin literature <br> 
-                        from 45 BC, making it over 2000 years old</small></p>
+                    <h2>The Greatest <br> Player name of <br> neymer</h2>
+                    <p><small>brazil is populer in the world for football <br> 
+                        Neymar is the reason why Brazil is popular nowadays. <br> 
+                        So all over the world
+Neymar is called a lot, for his skills.</small></p>
                     <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
              </div>
  
