--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment-2</title>
+              <!-- css cdn link start here-->
     <link rel="stylesheet" href="style.css">
+             <!-- css cdn link end here-->
+
+             <!-- font-awosome start here -->
     <script src="https://kit.fontawesome.com/80d99023ff.js" crossorigin="anonymous"></script>
+             <!-- font-awosome end here -->
+
+              <!-- google-font start here -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Oswald:wght@500&family=Poppins:wght@500&display=swap" rel="stylesheet">
+            <!-- google-font end here -->
 </head>
 <body>
     <main>
